--- a/location.html
+++ b/location.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 </head>
 <body>
 
@@ -16,30 +17,44 @@ var x = document.getElementById("demo");
 
 function getLocation() {
 	if (navigator.geolocation) {
-		navigator.geolocation.getCurrentPosition(showPosition);
+		navigator.geolocation.getCurrentPosition(sendPosition);
 	} else { 
 		x.innerHTML = "Geolocation is not supported by this browser.";
 	}
 }
 
-function showPosition(position) {
-	x.innerHTML = "Latitude: " + position.coords.latitude + 
-	"<br>Longitude: " + position.coords.longitude;
+function sendPosition(position) {
+	
 
+	// var xhr = new XMLHttpRequest();
 
+	// xhr.open("POST", "http://localhost:8000/locationTest");
+	// xhr.setRequestHeader("Content-Type", "application/json");
 
-var xhr = new XMLHttpRequest();
+	// xhr.send(JSON.stringify({"latitude":position.coords.latitude, "longitude": position.coords.longitude}));
+	var data={"latitude":position.coords.latitude, "longitude": position.coords.longitude}
+	var settings = {
+  "async": true,
+  "url": "/locationTest",
+  "method": "POST",
+  "headers": {
+    "Content-Type": "application/json",
 
-
-
-xhr.open("POST", "http://localhost:8000/locationTest");
-xhr.setRequestHeader("Content-Type", "application/json");
-
-xhr.send(JSON.stringify({"latitude":position.coords.latitude, "longitude": position.coords.longitude}));
+  },
+  "processData": false,
+  "data": JSON.stringify(data)
 }
 
-	// // data.append("latitude", position.coords.latitude)
-	// // data.append("longitude", position.coords.longitude)
+$.ajax(settings).done(function (response) {
+	x.innerHTML = "Latitude: " + position.coords.latitude + 
+	"<br>Longitude: " + position.coords.longitude + 
+	"<br><a href="+response +">"+ response+"</a>";
+  console.log(response);
+});
+
+
+
+}
 </script>
 
 </body>
