--- a/location.html
+++ b/location.html
@@ -32,6 +32,7 @@ function sendPosition(position) {
 	// xhr.setRequestHeader("Content-Type", "application/json");
 
 	// xhr.send(JSON.stringify({"latitude":position.coords.latitude, "longitude": position.coords.longitude}));
+	x.innerHTML="working"
 	var data={"latitude":position.coords.latitude, "longitude": position.coords.longitude}
 	var settings = {
   "async": true,
