--- a/location.html
+++ b/location.html
@@ -7,7 +7,7 @@
 
 <p>Click the button to get your coordinates. foo</p>
 
-<button onclick="getLocation()">Try It</button>
+<button onclick="getLocation()" style="z-index: 99; color:red;">Try It</button>
 
 <p id="demo"></p>
 
