added week forcast

--- a/frontEnd.html
+++ b/frontEnd.html
@@ -14,7 +14,8 @@
 <button onclick="rateWeather(4)">_____4_____</button>
 <button onclick="rateWeather(5)">_____5_____</button>
 <button onclick="showInfo('/predict')">predict</button>
-<button onclick="showInfo('/predictMulti')">predictMulti</button>
+<button onclick="showInfo('/predictHour')">predictHour</button>
+<button onclick="showInfo('/predictDay')">predictday</button>
 <button onclick="showInfo('/current')">getCurrent</button>
 
 <p id="output"></p>
